Fixphotoalign

--- a/style.css
+++ b/style.css
@@ -25,11 +25,6 @@ body {
     margin: 0 10px;
   } 
 
-  nav a:hover {
-    background-color: #F5F5F5; /* Soft gray hover color */
-   
-  }
-
   .container {
     display: flex;
     justify-content: center;
@@ -50,9 +45,7 @@ body {
     padding-left: 60px;
     padding-right: 60px;
 }
-  p {
 
-  }
   
   ul {
     list-style-type: none;
@@ -74,7 +67,6 @@ body {
 
 .row {
   display: block;
-  
 }
 
 .column {
@@ -84,14 +76,8 @@ body {
   vertical-align: top;
 }
 
-/* Adjust the margin-top of the first image */
-.column:first-child .card img {
-  margin-top: 10px; /* Adjust this value as needed */
-}
-
 .card {
   margin: 10px;
-  margin-top: 10px;
   overflow: hidden;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -99,8 +85,8 @@ body {
 
 .card img {
   max-width: 60%;
-  height: auto;
-  display: block;
+  height: 300px;
+  display: inline-block;
   margin: 0 auto; /* Center the images horizontally */
 }
 /* Customize the label (the container) */
@@ -156,6 +142,11 @@ body {
   border-radius: 50%;
   background: white;
   display: none;
+}
+
+.disclaim {
+  text-align: center; /* Center-align the content within each div */
+  font-size: 16px; 
 }
 
 .footnote {
